<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Nutrition</string>
    <string name="age">Ваш возраст</string>
    <string name="weight">Ваш вес</string>
    <string name="height">Ваш рост</string>
    <string name="allowance">Расчетная суточная норма калорий(ккал): </string>
    <string name="prot">Белки (г): </string>
    <string name="fats">Жиры (г): </string>
    <string name="carbo">Углеводы (г): </string>
    <string name="calo">Калории: </string>
    <string name="search_hint">Поиск продукта</string>

    <string-array name="meal_list">
        <item>Завтрак</item>
        <item>Второй завтрак</item>
        <item>Обед</item>
        <item>Полдник</item>
        <item>Ужин</item>
    </string-array>

    <string name="sexx">Ваш пол</string>
    <string name="male">m</string>

    <string-array name="sex_values">
        <item>m</item>
        <item>f</item>
    </string-array>
    <string-array name="sex_entries">
        <item>мужской</item>
        <item>женский</item>
    </string-array>

    <string name="level_sport">Частота занятий спортом</string>
    <string name="min_level">1.2</string>

    <string-array name="level_entries">
        <item>не занимаюсь</item>
        <item>1-3 раза в неделю</item>
        <item>3-5 раз в неделю</item>
        <item>6-7 раз в неделю</item>
        <item>Чаще чем раз в день</item>
    </string-array>
    <string-array name="level_values">
        <item>1.2</item>
        <item>1.375</item>
        <item>1.55</item>
        <item>1.725</item>
        <item>1.9</item>
    </string-array>
    <string-array name="target_value">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="target">Ваша цель</string>

    <string-array name="target_entries">
        <item>Поддержание массы</item>
        <item>Потеря массы</item>
        <item>Набор массы(эндоморф)</item>
        <item>Набор массы(мезаморф)</item>
        <item>Набор массы(эктоморф)</item>
    </string-array>
    <string-array name="target_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string name="default_target">0</string>
    <string name="fat_letter">Ж</string>
    <string name="prot_letter">Б</string>
    <string name="carbo_letter">У</string>
    <string name="calo_letter">К</string>
    <string name="name">Название:</string>
    <string name="proteins">Белки</string>
    <string name="fat">Жиры</string>
    <string name="carbohydrates">Углеводы</string>
    <string name="calories">Калории:</string>
    <string name="add">Добавить</string>
    <string name="cancel">Отмена</string>
    <string name="type">Группа</string>
    <string name="add_dish_button_add_list_product">Добавить из списка</string>
    <string name="add_dish_save_new_dish">Сохранить блюдо</string>
    <string name="menu_fill_db">Заполнить базу</string>
    <string name="menu_show_list">Показать полный список</string>
    <string name="menu_show_list_dishes">Показать список блюд</string>
    <string name="menu_show_list_products">Показать список продуктов</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_new_dish">Новое блюдо</string>
    <string name="menu_new_product">Новый продукт</string>
    <string name="menu_edit">Редактировать</string>
    <string name="menu_delete">Удалить</string>
    <string name="menu_done">Готово</string>

    <color name="red">#990000</color>
    <color name="green">#009900</color>
    <color name="yellow">#999900</color>
    <color name="black">#000000</color>
    <color name="bistr">#3D2B1F</color>
    <color name="light_hakki">#F0E68C</color>
    <color name="umbra">#734A12</color>
    <color name="weqweq">#ccffcc</color>
    <color name="weqwe">#88cf88</color>
    <color name="weq">#66ac66</color>
    <color name="action_bar">#226a22</color>

    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
