<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    tools:context=".Nutrition" >

    <item
        app:showAsAction="always"
        android:icon="@drawable/ic_action_overflow"
        android:orderInCategory="10000"
        android:title="menu">
        <menu>
            <item
                android:id="@+id/fill_db"
                app:showAsAction="never"
                android:title="@string/menu_fill_db"/>
            <item
                android:id="@+id/show_full_list"
                android:title="@string/menu_show_list_products"
                android:icon="@drawable/ic_action_view_as_list"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/settings"
                android:title="@string/menu_settings"
                app:showAsAction="ifRoom"/>
        </menu>

    </item>


</menu>
