<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/type"/>

        <MultiAutoCompleteTextView
                android:id="@+id/add_dish_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:completionThreshold="1"
                android:iconifiedByDefault="false"
                android:inputType="textCapSentences"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/name"/>

        <EditText
                android:id="@+id/add_dish_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
            <com.korzinni.shura.nutrition.views.CustomTextView
                    android:id="@+id/add_dish_display_protein"
                    custom:ball="@drawable/myaso"
                    custom:letter="@string/prot_letter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <com.korzinni.shura.nutrition.views.CustomTextView
                    custom:ball="@drawable/maslo"
                    custom:letter="@string/fat_letter"
                    android:id="@+id/add_dish_display_fats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <com.korzinni.shura.nutrition.views.CustomTextView
                custom:ball="@drawable/baton"
                custom:letter="@string/carbo_letter"
                android:id="@+id/add_dish_display_carbohydrates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/calo"/>
        <TextView
            android:id="@+id/add_dish_display_calories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"/>


    </LinearLayout>
</ScrollView>