<?xml version="1.0" encoding="utf-8"?>

<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/buttons_and_other_stuff"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/action_bar">
        <TextView
            android:id="@+id/meal_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white"
            android:layout_centerHorizontal="true"
            android:layout_alignParentLeft="true"/>
        <ImageButton
            android:id="@+id/meal_show_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_action_view_as_list"
            android:layout_centerHorizontal="true"
            android:layout_alignParentRight="true"/>
        <ImageButton
            android:id="@+id/meal_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_action_edit"
            android:visibility="gone"
            android:layout_centerHorizontal="true"
            android:layout_alignParentRight="true"/>
        <ImageButton
            android:id="@+id/meal_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_action_delete"
            android:visibility="gone"
            android:layout_centerHorizontal="true"
            android:layout_toLeftOf="@id/meal_edit"/>
        </RelativeLayout>
    <LinearLayout
        android:id="@+id/indicators"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <com.korzinni.shura.nutrition.views.CustomTextView
            android:id="@+id/meal_display_protein"
            custom:ball="@drawable/myaso"
            custom:letter="@string/prot_letter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <com.korzinni.shura.nutrition.views.CustomTextView
            custom:ball="@drawable/maslo"
            custom:letter="@string/fat_letter"
            android:id="@+id/meal_display_fats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <com.korzinni.shura.nutrition.views.CustomTextView
            custom:ball="@drawable/baton"
            custom:letter="@string/carbo_letter"
            android:id="@+id/meal_display_carbohydrates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/calo"/>
    <TextView
        android:id="@+id/meal_display_calories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
    <LinearLayout
        android:id="@+id/meal_layout"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"/>

</LinearLayout>